# tropical-cv

./: .gitignore  add_label_info.ipynb  pyproject.toml
notebooks/: 01_explore_ibtracs.ipynb  02_explore_goes.ipynb  03_goes_and_ibtracs.ipynb  04_filter_ibtracs_to_goes_east_bounds.ipynb
scripts/: dataset.py  download_goes.py  goes.py  ibtracs.py  resnet_classifier.py
